# anisolv

./: .gitignore  CITATION.cff  README.md  __init__.py  data.py  model.py  predict.py  pyproject.toml  solvent.py
_backbone/: escn_md.py  escn_md_block.py  escn_moe.py  outputs.py
_backbone/_compat/: base.py  gp_utils.py  graph_compute.py  inference.py  registry.py  utils.py
_backbone/common/: rotation.py  so3.py
_backbone/nn/: embedding.py  execution_backends.py  mole_utils.py  so2_layers.py
_backbone/triton/: __init__.py  custom_ops.py  node_to_edge_wigner_permute.py  permute_wigner_inv_edge_to_node.py
_const/: grid_mats.pt
samples/: H2O_dGsolv.py  H2O_single_point.py
tests/: test_dependency_audit.py  test_moe_merge.py  test_radius_graph_cell_list.py  test_solvent_output_gate.py
