[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anisolv"
version = "0.1.0"
description = "Standalone implicit solvation model for machine-learning interatomic potentials"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anton Ni" }]
keywords = [
    "chemistry",
    "solvation",
    "machine-learning-potential",
    "interatomic-potential",
]
dependencies = [
    "numpy",
    "torch",
]

[project.optional-dependencies]
# Sample scripts and ase.Atoms I/O.
samples = ["ase"]
# Downloading the gated checkpoint from Hugging Face.
hub = ["huggingface_hub"]
# GPU Triton kernels for the fast_gpu
gpu = ["triton>=3.4"]

[project.urls]
Repository = "https://github.com/Ant-on-knee/anisolv"
"Model weights" = "https://huggingface.co/antonknee/anisolv"

[tool.setuptools]
package-dir = { "anisolv" = "." }
packages = [
    "anisolv",
    "anisolv._backbone",
    "anisolv._backbone._compat",
    "anisolv._backbone.common",
    "anisolv._backbone.nn",
    "anisolv._backbone.triton",
]

[tool.setuptools.package-data]
# Bundle the compact (non-gated) weights so a plain `pip install` works out of the box.
# model1.pt is intentionally excluded — it is gated and downloaded separately.
"anisolv" = ["_const/*.json", "_const/*.pt", "models/model1_compact.pt"]
"anisolv._backbone" = ["*.pt"]
